<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ricardo.pruebavolley2.VehiculosActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_vehiculos"
        android:layout_gravity="center"
        android:textSize="40dp"
        android:paddingTop="10dp"/>
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/btnPersonas"
        app:fab_addButtonPlusIconColor="@color/colorPrimary"
        app:fab_addButtonColorNormal="@color/colorAccent"
        android:elevation="10dp">
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_directions_car_black_24dp"
            android:elevation="5dp" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="mini"
            android:src="@drawable/ic_directions_walk_black_24dp"
            android:elevation="5dp"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enCampus"
        android:textSize="25dp"
        android:paddingTop="10dp"
        android:layout_marginLeft="30dp"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matricula"
        android:textSize="25dp"
        android:paddingTop="20dp"
        android:layout_marginLeft="30dp"
        />

</LinearLayout>


<ListView
    android:id="@+id/listVehiculos"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">
</ListView>

</LinearLayout>
